# losebot

./: .envrc  .gitignore  LICENSE.txt  README.md  losebot.py  loseit_scraper.py  pyproject.toml  setup.py
